--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "agri-smart-website",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "Sistem Hidroponik Pintar Berbasis IoT & AI",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.2",
-    "@testing-library/user-event": "^13.5.0",
-    "lucide-react": "^0.563.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "lucide-react": "^0.263.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
